# sentinel-toolkit

./: .gitignore  .pylintrc  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
sentinel_toolkit/: __init__.py  s2_srf.py
sentinel_toolkit/colorimetry/: __init__.py  sentinel_values.py
sentinel_toolkit/colorimetry/illuminants/: __init__.py  d65.py
sentinel_toolkit/colorimetry/tests/: test_sentinel_values.py
sentinel_toolkit/converter/: __init__.py  converter.py
sentinel_toolkit/converter/tests/: test_converter.py
sentinel_toolkit/ecostress/: __init__.py  ecostress.py  ecostress_db_generator.py
sentinel_toolkit/ecostress/tests/: test_ecostress.py  test_ecostress_db_generator.py
sentinel_toolkit/srf/: __init__.py  s2_srf.py
sentinel_toolkit/srf/tests/: test_s2_srf.py
sentinel_toolkit/srf/tests/test_data/: s2a_srf.xlsx
tests/: __init__.py  test_s2_srf.py
tests/test_data/: s2a_srf.xlsx
